enable autocomplete #117; fix overflow of the editor container fixes #92

--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -403,9 +403,9 @@ app {
     width: 82%;
 }
 
-/* Editor */
-.overflowingContentWidgets {
-    display: none;
+/* Code Editor */
+#user-code-editor-container {
+    overflow: hidden;
 }
 
 #user-code-editor {
